ch 8 rewriting exercise for m1 comp

--- a/fastai_exercises/fast_ai_chapter08-collaborative-filtering.ipynb
+++ b/fastai_exercises/fast_ai_chapter08-collaborative-filtering.ipynb
@@ -6,8 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.collab import *\n",
-    "from fastai.tabular.all import *\n",
+    "import pandas as pd\n",
+    "\n",
+    "# torch import : more compatible with m1\n",
+    "import torch\n",
+    "from torch.nn import Module, Embedding\n",
+    "from torch.nn.functional import one_hot\n",
+    "\n",
+    "# fastai import : less compatible with m1\n",
+    "from fastai.data.external import untar_data, URLs\n",
+    "from fastai.collab import CollabDataLoaders\n",
+    "from fastai.learner import Learner\n",
+    "from fastai.losses import MSELossFlat\n",
+    "\n",
     "# get path to MovieLens data\n",
     "path = untar_data(URLs.ML_100k)"
    ]
@@ -322,63 +333,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>308</td>\n",
-       "      <td>Terminator 2: Judgment Day (1991)</td>\n",
-       "      <td>4</td>\n",
+       "      <td>181</td>\n",
+       "      <td>Jack and Sarah (1995)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>727</td>\n",
-       "      <td>Big Bully (1996)</td>\n",
-       "      <td>2</td>\n",
+       "      <td>846</td>\n",
+       "      <td>Speed (1994)</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>917</td>\n",
-       "      <td>Romy and Michele's High School Reunion (1997)</td>\n",
-       "      <td>2</td>\n",
+       "      <td>79</td>\n",
+       "      <td>Leaving Las Vegas (1995)</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>206</td>\n",
-       "      <td>Event Horizon (1997)</td>\n",
-       "      <td>3</td>\n",
+       "      <td>183</td>\n",
+       "      <td>Star Wars (1977)</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>169</td>\n",
-       "      <td>M*A*S*H (1970)</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>286</td>\n",
-       "      <td>When Harry Met Sally... (1989)</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>880</td>\n",
-       "      <td>Clockers (1995)</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>621</td>\n",
-       "      <td>Twister (1996)</td>\n",
+       "      <td>601</td>\n",
+       "      <td>Ghost and the Darkness, The (1996)</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>276</td>\n",
+       "      <td>Happy Gilmore (1996)</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>922</td>\n",
+       "      <td>Little Women (1994)</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>457</td>\n",
+       "      <td>House of the Spirits, The (1993)</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>233</td>\n",
-       "      <td>Patton (1970)</td>\n",
+       "      <td>401</td>\n",
+       "      <td>Circle of Friends (1995)</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>3</td>\n",
-       "      <td>In the Name of the Father (1993)</td>\n",
-       "      <td>2</td>\n",
+       "      <td>468</td>\n",
+       "      <td>E.T. the Extra-Terrestrial (1982)</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -424,13 +435,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.0821, 1.1354, 1.1286, 1.8296, 0.4124])\n"
+      "tensor([-0.2203,  0.0247,  0.7704, -0.7362, -1.3891])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([0.0821, 1.1354, 1.1286, 1.8296, 0.4124])"
+       "tensor([-0.2203,  0.0247,  0.7704, -0.7362, -1.3891])"
       ]
      },
      "execution_count": 7,
@@ -439,7 +450,9 @@
     }
    ],
    "source": [
-    "one_hot_3 = one_hot(3, n_users).float()\n",
+    "# we need to manually cast 3 as a tensor because we are using torch one_hot\n",
+    "# not fastai one_hot\n",
+    "one_hot_3 = one_hot(torch.tensor(3), n_users).float()\n",
     "# print actual index look up\n",
     "print(user_factors[3])\n",
     "# should be equal to look up as a matrix operation using one hot encoding\n",
@@ -454,6 +467,8 @@
    "source": [
     "class DotProduct(Module):\n",
     "    def __init__(self, n_users, n_movies, n_factors):\n",
+    "        # Because we are using torch Module not fastai's\n",
+    "        super().__init__() # Add this line\n",
     "        self.user_factors = Embedding(n_users, n_factors)\n",
     "        self.movie_factors = Embedding(n_movies, n_factors)\n",
     "\n",
@@ -541,33 +556,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>1.319795</td>\n",
-       "      <td>1.315767</td>\n",
+       "      <td>47.118137</td>\n",
+       "      <td>44.932045</td>\n",
        "      <td>00:07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1.090916</td>\n",
-       "      <td>1.069758</td>\n",
-       "      <td>00:06</td>\n",
+       "      <td>21.887932</td>\n",
+       "      <td>23.793154</td>\n",
+       "      <td>00:09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.971764</td>\n",
-       "      <td>0.972436</td>\n",
-       "      <td>00:06</td>\n",
+       "      <td>7.181380</td>\n",
+       "      <td>11.404498</td>\n",
+       "      <td>00:07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.859432</td>\n",
-       "      <td>0.889331</td>\n",
-       "      <td>00:08</td>\n",
+       "      <td>3.452259</td>\n",
+       "      <td>8.136347</td>\n",
+       "      <td>00:06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.775916</td>\n",
-       "      <td>0.869695</td>\n",
-       "      <td>00:06</td>\n",
+       "      <td>2.509485</td>\n",
+       "      <td>7.752282</td>\n",
+       "      <td>00:07</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -581,12 +596,13 @@
     }
    ],
    "source": [
+    "# @audit : refactoring fastai => pytorch has DRASTICALLY model perf, why?\n",
     "learn.fit_one_cycle(5, 5e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,6 +627,7 @@
     "        n_factors,\n",
     "        y_range=(0, 5.5)\n",
     "    ):\n",
+    "        super().__init__()\n",
     "        self.user_factors = Embedding(n_users, n_factors)\n",
     "        self.movie_factors = Embedding(n_movies, n_factors)\n",
     "        self.y_range = y_range\n",
@@ -622,6 +639,16 @@
     "        # from fastai library?  What xform is fastai applying that is \n",
     "        # preventing m1 from working LOL\n",
     "        return sigmoid_range_mt((users*movies).sum(dim=1), *self.y_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DotProductM(n_users, n_movies, 50)\n",
+    "learn = Learner(dls, model, loss_func=MSELossFlat())"
    ]
   },
   {
@@ -671,33 +698,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.976687</td>\n",
-       "      <td>0.976521</td>\n",
+       "      <td>7.678244</td>\n",
+       "      <td>7.621976</td>\n",
        "      <td>00:07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.896578</td>\n",
-       "      <td>0.893390</td>\n",
+       "      <td>6.636419</td>\n",
+       "      <td>7.272877</td>\n",
        "      <td>00:07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.677578</td>\n",
-       "      <td>0.861502</td>\n",
-       "      <td>00:07</td>\n",
+       "      <td>5.345221</td>\n",
+       "      <td>6.895683</td>\n",
+       "      <td>00:08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.484772</td>\n",
-       "      <td>0.863324</td>\n",
+       "      <td>4.570786</td>\n",
+       "      <td>6.675281</td>\n",
        "      <td>00:07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.372025</td>\n",
-       "      <td>0.867838</td>\n",
-       "      <td>00:07</td>\n",
+       "      <td>4.090703</td>\n",
+       "      <td>6.634080</td>\n",
+       "      <td>00:06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -711,8 +738,113 @@
     }
    ],
    "source": [
-    "model = DotProductM(n_users, n_movies, 50)\n",
-    "learn = Learner(dls, model, loss_func=MSELossFlat())\n",
+    "# @audit : refactoring fastai => pytorch has DRASTICALLY model perf, why?\n",
+    "learn.fit_one_cycle(5, 5e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @audit : Explain why we are adding bias\n",
+    "\n",
+    "class DotProductBias(Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        n_users,\n",
+    "        n_movies,\n",
+    "        n_factors,\n",
+    "        y_range = (0, 5.5)\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.user_factors = Embedding(n_users, n_factors)\n",
+    "        self.user_bias = Embedding(n_users, 1)\n",
+    "        self.movie_factors = Embedding(n_movies, n_factors)\n",
+    "        self.movie_bias = Embedding(n_movies, 1)\n",
+    "        self.y_range = y_range\n",
+    "    def forward(self, x):\n",
+    "        users = self.user_factors(x[:,0])\n",
+    "        movies = self.movie_factors(x[:,1])\n",
+    "        # Jupyter cell is crashing here, and the difference is keepdim\n",
+    "        # @audit : Explain why\n",
+    "        # res = (users*movies).sum(dim=1, keepdim=True)\n",
+    "        res = (users*movies).sum(dim=1, keepdim=False)\n",
+    "        # @audit : GPT suggest adding squeeze() when keepdim=False, explain why\n",
+    "        res += self.user_bias(x[:,0]).squeeze() + self.movie_bias(x[:,1]).squeeze()\n",
+    "        return sigmoid_range_mt(res, *self.y_range)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DotProductBias(n_users, n_movies, 50)\n",
+    "learn = Learner(dls, model, loss_func=MSELossFlat())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      <progress value='0' class='' max='5' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      \n",
+       "    </div>\n",
+       "    \n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
     "learn.fit_one_cycle(5, 5e-3)"
    ]
   }
