ch 6 fixed lint, but did NOT run cell to check lol

--- a/fastai_exercises/fast-ai-chapter06-other-computer-vision-problems.ipynb
+++ b/fastai_exercises/fast-ai-chapter06-other-computer-vision-problems.ipynb
@@ -19,8 +19,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import torch\n",
+    "import os\n",
+    "from IPython.display import display, Markdown\n",
+    "from PIL import Image\n",
+    "from functools import partial\n",
+    "\n",
+    "from fastbook import plot_function\n",
+    "\n",
+    "from fastai.vision.data import np, tensor\n",
+    "from fastai.vision.data import DataBlock\n",
+    "from fastai.vision.data import ImageBlock, MultiCategoryBlock\n",
+    "from fastai.vision.data import PointBlock, FuncSplitter\n",
+    "from fastai.vision.augment import RandomResizedCrop\n",
+    "from fastai.vision.augment import aug_transforms, Normalize\n",
+    "# @audit-issue ❌ : fastai.vision.learner FAILS, use fastai.vision.all instead\n",
+    "from fastai.vision.all import vision_learner #, cnn_learner\n",
+    "from fastai.vision.learner import nn\n",
+    "from fastai.vision.models import resnet18\n",
+    "from fastai.vision.core import PILImage\n",
+    "from fastai.vision.core import imagenet_stats\n",
+    "from fastai.vision.widgets import plt\n",
     "from fastai.vision.utils import untar_data, URLs\n",
+    "from fastai.vision.data import get_image_files, Path\n",
     "# PASCAL dataset can have multiple labels per image\n",
+    "\n",
     "path = untar_data(URLs.PASCAL_2007)"
    ]
   },
@@ -105,8 +129,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# uses CVS file to get the meta info for :  \n",
     "# - labels per image \n",
     "# - as opposed to deciphering from implicit folder and file name conventions\n",
@@ -235,8 +257,6 @@
     }
    ],
    "source": [
-    "from fastai.vision.data import DataBlock\n",
-    "\n",
     "# Example : Create new columns and use them to do calculations\n",
     "# @note : building a DataFrame == building a table of 2D rows and columns\n",
     "df1 = pd.DataFrame()\n",
@@ -403,8 +423,6 @@
     }
    ],
    "source": [
-    "from fastai.vision.data import ImageBlock, MultiCategoryBlock\n",
-    "\n",
     "# @note open the images and convert to tensors\n",
     "dblock = DataBlock(\n",
     "    # ImageBlock works fine because we have a file path\n",
@@ -461,8 +479,6 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "\n",
     "# idxs = indexes where the value is 1.0\n",
     "idxs = torch.where(dsets.train[0][1]==1.0)[0] # type: ignore\n",
     "idx_to_labels = dsets.train.vocab[idxs]\n",
@@ -640,10 +656,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "from IPython.display import display, Markdown\n",
-    "from PIL import Image\n",
-    "\n",
     "source_data_path = '/Users/mton/.fastai/data/pascal_2007/train'\n",
     "\n",
     "# Get the train and valid ids from the splitter\n",
@@ -744,8 +756,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.vision.augment import RandomResizedCrop\n",
-    "\n",
     "dblock = DataBlock(\n",
     "    # ImageBlock is the independent (x) variable and \n",
     "    # MultiCategoryBlock is the dependent (y) variable\n",
@@ -812,10 +822,6 @@
     }
    ],
    "source": [
-    "# @audit-issue ❌ : fastai.vision.learner FAILS, use fastai.vision.all instead\n",
-    "from fastai.vision.all import vision_learner, cnn_learner\n",
-    "from fastai.vision.models import resnet18\n",
-    "\n",
     "#learn = cnn_learner(dls, resnet18)\n",
     "# @audit 🛑 : using cnn_learner for book example\n",
     "# @todo : reimplement using vision_learner \n",
@@ -938,8 +944,6 @@
     }
    ],
    "source": [
-    "from fastai.vision.learner import nn\n",
-    "\n",
     "# @audit-ok ☑ : Confirm this is equivalent to F.binary_cross_entropy_with_logits\n",
     "# - also known as nn.BCEWithLogitsLoss\n",
     "# - F.binary_cross_entropy_with_logits is a combination of sigmoid and BCE\n",
@@ -983,8 +987,6 @@
    ],
    "source": [
     "# Python partial function SCRATCH PAD\n",
-    "from functools import partial\n",
-    "\n",
     "# How python partial functions work\n",
     "# https://www.geeksforgeeks.org/partial-functions-python/\n",
     "# https://www.youtube.com/watch?v=0qBzLzqZtJc\n",
@@ -1441,8 +1443,6 @@
     }
    ],
    "source": [
-    "from fastai.vision.widgets import plt\n",
-    "\n",
     "xs = torch.linspace(0.05, 0.95, 29)\n",
     "accs = [accuracy_multi(preds, targs, thresh=i, sigmoid=False) for i in xs]\n",
     "\n",
@@ -1699,8 +1699,6 @@
     }
    ],
    "source": [
-    "from fastai.vision.data import get_image_files, Path\n",
-    "\n",
     "# recursively get all image files\n",
     "img_files = get_image_files(path_head_pose)\n",
     "\n",
@@ -1736,8 +1734,6 @@
     }
    ],
    "source": [
-    "from fastai.vision.core import PILImage\n",
-    "\n",
     "img = PILImage.create(img_files[0]) #type: ignore\n",
     "print(f'image resolution (source) : {img.shape}') # type: ignore\n",
     "img.to_thumb(160) # type: ignore\n"
@@ -1769,8 +1765,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.vision.data import np, tensor\n",
-    "\n",
     "# Gets center coordinates of face from pose file, return as a tensor of 2 values\n",
     "def get_ctr(f):\n",
     "    cal = np.genfromtxt(path_head_pose/'01'/'rgb.cal', skip_footer=6)\n",
@@ -1811,10 +1805,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastai.vision.data import ImageBlock, PointBlock, FuncSplitter\n",
-    "from fastai.vision.augment import aug_transforms, Normalize\n",
-    "from fastai.vision.core import imagenet_stats\n",
-    "\n",
     "biwi = DataBlock(\n",
     "    # @note PointBlock indicates that the labels represent coordinates, fastai\n",
     "    # applies the same augmentation to these coordinates as well as the images\n",
@@ -1973,8 +1963,6 @@
     }
    ],
    "source": [
-    "from fastbook import plot_function\n",
-    "\n",
     "# @audit-ok 🔎 : Explain why are we using partial sigmoid_range\n",
     "# Confirm if PointBlock is uv coordinate, where 0,0 is the center of the image\n",
     "# if so we are normalizing the position of the face center to be between -1 and 1\n",
