--- a/fastai_exercises/fast_ai_chapter08-collaborative-filtering.ipynb
+++ b/fastai_exercises/fast_ai_chapter08-collaborative-filtering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,17 @@
     "# from torch.nn import Module, Embedding\n",
     "\n",
     "# fastai import : less compatible with m1\n",
+    "# @audit : why does the fastai version of Module and Embedding have better model\n",
+    "# performance than torch.nn vanilla import?\n",
     "from fastai.torch_basics import Module, Embedding\n",
     "from fastai.data.external import untar_data, URLs\n",
     "from fastai.collab import CollabDataLoaders\n",
+    "# import and use fastai's collab learner instead of setting up our own\n",
+    "from fastai.collab import collab_learner\n",
     "from fastai.learner import Learner\n",
     "from fastai.losses import MSELossFlat\n",
     "from fastai.torch_core import one_hot\n",
+    "from fastai.tabular.model import get_emb_sz\n",
     "\n",
     "# super charged version of Python's list\n",
     "# enhanced functionality and is used extensively throughout the fastai library\n",
@@ -41,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- read csv --"
+    "#### read csv"
    ]
   },
   {
@@ -154,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- log movie titles --"
+    "#### log movie titles"
    ]
   },
   {
@@ -248,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- log movie rating --"
+    "#### log movie rating"
    ]
   },
   {
@@ -352,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- dls show_batch() --"
+    "#### dls => show_batch()"
    ]
   },
   {
@@ -458,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- n_users n_movies n_factors --"
+    "#### n_users n_movies n_factors"
    ]
   },
   {
@@ -970,7 +975,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- fastai cpu variant --"
+    "#### fastai cpu variant"
    ]
   },
   {
@@ -1213,7 +1218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- L --"
+    "#### L is a super charged List"
    ]
   },
   {
@@ -1336,7 +1341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- create parameter with random init --"
+    "#### Create Parameter with Random Init"
    ]
   },
   {
@@ -1476,6 +1481,577 @@
    ],
    "source": [
     "learn.fit_one_cycle(5, 5e-3, wd=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Interpreting Embeddings and Bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Children of the Corn: The Gathering (1996)',\n",
+       " 'Lawnmower Man 2: Beyond Cyberspace (1996)',\n",
+       " 'Robocop 3 (1993)',\n",
+       " 'Cable Guy, The (1996)',\n",
+       " 'Crow: City of Angels, The (1996)']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract movie bias terms from the model\n",
+    "# squeeze() removes any dimension of size one\n",
+    "# - effectively returns a single array of bias value\n",
+    "# - as opposed to an array of array with size one of bias values\n",
+    "# - squeeze 2d tensor to 1d tensor, removes any unnecessary dimensions\n",
+    "movie_bias = learn.model.movie_bias.squeeze()\n",
+    "# select the first 5 indices of movies with the smallest bias term\n",
+    "idxs = movie_bias.argsort()[:5]\n",
+    "# use idxs to lookup movie titles in dls.classes['title'] column\n",
+    "[dls.classes['title'][i] for i in idxs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Titanic (1997)',\n",
+       " 'Shawshank Redemption, The (1994)',\n",
+       " 'L.A. Confidential (1997)',\n",
+       " 'Silence of the Lambs, The (1991)',\n",
+       " 'As Good As It Gets (1997)']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idxs = movie_bias.argsort(descending=True)[:5]\n",
+    "[dls.classes['title'][i] for i in idxs]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -- USING FASTAI COLLAB --"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn = collab_learner(dls, n_factors=50, y_range=(0, 5.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.974395</td>\n",
+       "      <td>0.933383</td>\n",
+       "      <td>00:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.895607</td>\n",
+       "      <td>0.866923</td>\n",
+       "      <td>00:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.759594</td>\n",
+       "      <td>0.821885</td>\n",
+       "      <td>00:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.598035</td>\n",
+       "      <td>0.806962</td>\n",
+       "      <td>00:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.494833</td>\n",
+       "      <td>0.806945</td>\n",
+       "      <td>00:03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "learn.fit_one_cycle(5, 5e-3, wd=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EmbeddingDotBias(\n",
+       "  (u_weight): Embedding(944, 50)\n",
+       "  (i_weight): Embedding(1665, 50)\n",
+       "  (u_bias): Embedding(944, 1)\n",
+       "  (i_bias): Embedding(1665, 1)\n",
+       ")"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The names of the layers can be seen by printing the model\n",
+    "learn.model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Shawshank Redemption, The (1994)',\n",
+       " 'Titanic (1997)',\n",
+       " 'L.A. Confidential (1997)',\n",
+       " 'Star Wars (1977)',\n",
+       " 'Silence of the Lambs, The (1991)']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can replicate any previous analysis that we did with our previous models\n",
+    "movie_bias = learn.model.i_bias.weight.squeeze()\n",
+    "idxs = movie_bias.argsort(descending=True)[:5]\n",
+    "[dls.classes['title'][i] for i in idxs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Go Fish (1994)'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_factors = learn.model.i_weight.weight\n",
+    "idx = dls.classes['title'].o2i['Silence of the Lambs, The (1991)']\n",
+    "# idx = dls.classes['title'].o2i['Star Wars (1977)']\n",
+    "distances = nn.CosineSimilarity(dim=1)(movie_factors, movie_factors[idx][None])\n",
+    "idx = distances.argsort(descending=True)[1]\n",
+    "dls.classes['title'][idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(944, 74), (1665, 102)]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embs = get_emb_sz(dls)\n",
+    "embs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CollabNN(Module):\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            user_sz,\n",
+    "            item_sz,\n",
+    "            y_range=(0, 5.5),\n",
+    "            n_act=100\n",
+    "    ):\n",
+    "        self.user_factors = Embedding(*user_sz)\n",
+    "        self.item_factors = Embedding(*item_sz)\n",
+    "        self.layers = nn.Sequential(\n",
+    "            nn.Linear(user_sz[1]+item_sz[1], n_act),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(n_act, 1)\n",
+    "        )\n",
+    "        self.y_range = y_range\n",
+    "\n",
+    "    def forward(\n",
+    "            self,\n",
+    "            x\n",
+    "    ):\n",
+    "\n",
+    "        embs =self.user_factors(\n",
+    "            x[:,0], self.item_factors(x[:,1])   \n",
+    "        )\n",
+    "        x = self.layers(torch.cat(embs, dim=1))\n",
+    "        return sigmoid_range_mt(x, *self.y_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collab = CollabNN(*embs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.489128</td>\n",
+       "      <td>0.871878</td>\n",
+       "      <td>00:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.498628</td>\n",
+       "      <td>0.950460</td>\n",
+       "      <td>00:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.338813</td>\n",
+       "      <td>0.995866</td>\n",
+       "      <td>00:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.223272</td>\n",
+       "      <td>1.015341</td>\n",
+       "      <td>00:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.138106</td>\n",
+       "      <td>1.021616</td>\n",
+       "      <td>00:02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "learn = Learner(dls, model, loss_func=MSELossFlat())\n",
+    "learn.fit_one_cycle(5, 5e-3, wd=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.994689</td>\n",
+       "      <td>0.970684</td>\n",
+       "      <td>00:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.910055</td>\n",
+       "      <td>0.893291</td>\n",
+       "      <td>00:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.854469</td>\n",
+       "      <td>0.866114</td>\n",
+       "      <td>00:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.832707</td>\n",
+       "      <td>0.841717</td>\n",
+       "      <td>00:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.780209</td>\n",
+       "      <td>0.844169</td>\n",
+       "      <td>00:04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "learn = collab_learner(dls, use_nn=True, y_range=(0, 5.5))\n",
+    "layers = [100, 50]\n",
+    "learn.fit_one_cycle(5, 5e-3, wd=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -- CONCLUSION --\n",
+    "\n",
+    "For our first non-computer vision application, we looked at recommendation\n",
+    "systems and saw how gradient descent can learn intrinsic factors or biases\n",
+    "about items from a history of ratings.  Those can give us information about\n",
+    "the data.\n",
+    "\n",
+    "We also built our first model in Pytorch.  We will do a lot more of this in\n",
+    "the next section of the book, but first, let's finish our dive into the other\n",
+    "general applications of deep learning, continuing with tabular data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Questionnaire\n",
+    "\n",
+    "- 1 - What problem does collaborative filtering solve?\n",
+    "\n",
+    "- 2 - How does it solve it\n",
+    "\n",
+    "- 3 - Why might a collaborative filtering predictive model fail to be a very\n",
+    "useful recommendation system?\n",
+    "\n",
+    "- 4 - What does a crosstab representation of collaborative filtering data look\n",
+    "like?\n",
+    "\n",
+    "- 5 - Write the code to create a crosstab representation of the MovieLens data\n",
+    "(you might need to do some web searching!)\n",
+    "\n",
+    "- 6 - What is a latent factor?  Why is it \"latent\"?\n",
+    "\n",
+    "- 7 - What is a dot product?  Calculate a dot product manually using pure Python\n",
+    "with lists.\n",
+    "\n",
+    "- 8 - What does pandas.DataFrame.merge do?\n",
+    "\n",
+    "- 9 - What is an embedding matrix?\n",
+    "\n",
+    "- 10 - What is the relationship between an embedding and a matrix of\n",
+    "one-hot-encoded vectors?\n",
+    "\n",
+    "- 11 - Why do we need Embedding if we could use one-hot-encoded vectors for the\n",
+    "same thing?\n",
+    "\n",
+    "- 12 - What does an embedding contain before we start training (assuming we're\n",
+    "not using a pretrained model)?\n",
+    "\n",
+    "- 13 - Create a class (without peeking, if possible!) and use it\n",
+    "\n",
+    "- 14 - What does x[:, 0] return?\n",
+    "\n",
+    "```sh\n",
+    "ANSWER : ALL the ELEMENTS in the first COLUMN (in the context of a 2D array or\n",
+    "tensor)\n",
+    "- : specifies that we want all the elements along this dimension\n",
+    "- 0 specifies the index along the second dimension (1st column in this case)\n",
+    "```\n",
+    "\n",
+    "- 15 - Rewrite the `DotProduct` class (without peeking, if possible!) and train\n",
+    "a model with it\n",
+    "\n",
+    "- 16 - What is a good loss function to use for MovieLens?  Why?\n",
+    "\n",
+    "- 17 - What would happen if we used cross-entropy loss with MovieLens?  How\n",
+    "would we need to change the model?\n",
+    "\n"
    ]
   }
  ],
