ch 8 outline and Giphy pass

--- a/fastai_exercises/fast_ai_chapter08-collaborative-filtering.ipynb
+++ b/fastai_exercises/fast_ai_chapter08-collaborative-filtering.ipynb
@@ -4,16 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### -- GLOBAL IMPORTS --"
+    "### [ GLOBAL IMPORTS ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "# torch import : more compatible with m1\n",
     "import torch\n",
@@ -46,12 +47,151 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# -- COLLABORATIVE FILTERING --\n",
+    "\n",
+    "<iframe src=\"https://giphy.com/embed/MXX2jE0MChtYl1AgBe\" width=\"480\" height=\"480\" frameBorder=\"0\" class=\"giphy-embed\" allowFullScreen></iframe><p><a href=\"https://giphy.com/gifs/fun-thumb-up-MXX2jE0MChtYl1AgBe\">via GIPHY</a></p>\n",
+    "\n",
+    "- Correlates user account preferences to similar accounts\n",
+    "- Predictively interpolate and fill in empty table ITEMS with values\n",
+    "- NN doesn't even need FACTORS : it learns the LATENT factors!\n",
+    "\n",
+    "- These items can be :\n",
+    "    - products : movies, goods, services\n",
+    "    - url links\n",
+    "    - diagnosis\n",
+    "    - ... etc\n",
+    "\n",
+    "### Product Applications\n",
+    "\n",
+    "- recommendation systems\n",
+    "    - Netflix : movies rated\n",
+    "    - Amazon  : products viewed/bought\n",
+    "- social post feeds\n",
+    "    - Twitter : scroll speed, post click, likes\n",
+    "    - Tik Tok : likes?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Key Concept : Latent Factors\n",
+    "\n",
+    "Examples of Netflix Latent Concepts :\n",
+    "\n",
+    "- science fiction\n",
+    "- action heavy\n",
+    "- 1970's\n",
+    "\n",
+    "<iframe src=\"https://giphy.com/embed/yznEXxtq7wQlG\" width=\"480\" height=\"204\" frameBorder=\"0\" class=\"giphy-embed\" allowFullScreen></iframe><p><a href=\"https://giphy.com/gifs/yznEXxtq7wQlG\">via GIPHY</a></p>\n",
+    "\n",
+    "There is surprisingly little difference between :\n",
+    "- Explicitly SPECIFYING a Latent Factors\n",
+    "- Implicitly LEARNING with a GENERAL gradient descent approach \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user1 * skywalker  => [ 2.1420000000000003 ]\n",
+      "user1 * casablanca => [ -1.611 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Explicitly SPECIFYING Latent Factors\n",
+    "'''\n",
+    "array index :\n",
+    "    - sci-fi\n",
+    "    - action\n",
+    "    - old movies\n",
+    "\n",
+    "Range -1 to 1 where :\n",
+    "    - positive number indicates STRONGER match\n",
+    "    - negative number indicates WEAKER match\n",
+    "'''\n",
+    "\n",
+    "# user ID\n",
+    "user1 = np.array([0.90, 0.80, -0.60]) # user who likes modern sci-fi action\n",
+    "\n",
+    "# movie ID\n",
+    "rise_skywalker = np.array([0.98, 0.90, -0.90]) # Rise of Skywalker movie\n",
+    "casablanca = np.array([-0.99, -0.30, 0.80])    # Casablanca\n",
+    "\n",
+    "# Dot Product :\n",
+    "#   - Multiply two VECTORS\n",
+    "#   - Add up the results\n",
+    "print(f\"user1 * skywalker  => [ {(user1 * rise_skywalker).sum()} ]\")\n",
+    "print(f\"user1 * casablanca => [ {(user1 * casablanca).sum()} ]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implicitly LEARNING with a GENERAL gradient descent approach\n",
+    "\n",
+    "# Step 1 :\n",
+    "# - randomly initialize parameters\n",
+    "# - parameters are a set of latent factors for userID and movieID\n",
+    "\n",
+    "# Step 2 :\n",
+    "# - calculate our predictions\n",
+    "# - dot product userID and movieID\n",
+    "#   - GREATER product if either :\n",
+    "#       - userID.action is HIGH and movieID.action HIGH\n",
+    "#       - userID.action is LOW and movieID.action LOW\n",
+    "#   - LOWER product if either :\n",
+    "#       - userID.action is LOW while movieID.action is HIGH\n",
+    "#       - userID.action is HIGH while movieID.action is LOW\n",
+    "\n",
+    "# Step 3 :\n",
+    "# - calculate our loss\n",
+    "#   - use MEAN SQUARED ERROR as a reasonable starting point\n",
+    "#   - but almost any loss function works ... @audit : EXPLAIN THIS!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# -- MOVIELENS DATA SET --\n",
+    "\n",
+    "- Set contains :\n",
+    "    - movie ID\n",
+    "    - user ID\n",
+    "    - rating\n",
+    "    - timestamp\n",
+    "\n",
+    "- Full set has 25 million entries\n",
+    "    - We will work with 100,000 of them\n",
+    "\n",
+    "- Latent PREFERENCES for user ID our model are likely to predict\n",
+    "    - genre\n",
+    "    - preferred director\n",
+    "    - preferred actor\n",
+    "    - age\n",
+    "    - etc..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### read csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +270,7 @@
        "4   166    346       1  886397596"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +371,7 @@
        "4      5     Copycat (1995)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -343,12 +483,14 @@
        "4   306    242       5  876503793  Kolya (1996)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# @audit : Explain how this merge works, how come it's organized by movie\n",
+    "# instead of user?\n",
     "ratings=ratings.merge(movies)\n",
     "ratings.head()"
    ]
@@ -357,12 +499,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### dls => show_batch()"
+    "### dls => show_batch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -380,63 +522,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>851</td>\n",
-       "      <td>Chain Reaction (1996)</td>\n",
-       "      <td>3</td>\n",
+       "      <td>472</td>\n",
+       "      <td>White Squall (1996)</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>851</td>\n",
-       "      <td>Raiders of the Lost Ark (1981)</td>\n",
-       "      <td>5</td>\n",
+       "      <td>624</td>\n",
+       "      <td>Kids in the Hall: Brain Candy (1996)</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>932</td>\n",
-       "      <td>Cliffhanger (1993)</td>\n",
-       "      <td>2</td>\n",
+       "      <td>463</td>\n",
+       "      <td>Down Periscope (1996)</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>343</td>\n",
-       "      <td>Perez Family, The (1995)</td>\n",
-       "      <td>4</td>\n",
+       "      <td>181</td>\n",
+       "      <td>Sleepers (1996)</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>727</td>\n",
-       "      <td>Braveheart (1995)</td>\n",
-       "      <td>4</td>\n",
+       "      <td>506</td>\n",
+       "      <td>Star Trek: The Wrath of Khan (1982)</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>447</td>\n",
-       "      <td>Mulholland Falls (1996)</td>\n",
-       "      <td>3</td>\n",
+       "      <td>588</td>\n",
+       "      <td>Snow White and the Seven Dwarfs (1937)</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>292</td>\n",
-       "      <td>Hamlet (1996)</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>455</td>\n",
-       "      <td>Evita (1996)</td>\n",
+       "      <td>62</td>\n",
+       "      <td>Blue in the Face (1995)</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>398</td>\n",
+       "      <td>Quiet Man, The (1952)</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>425</td>\n",
-       "      <td>Liar Liar (1997)</td>\n",
-       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Fargo (1996)</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>17</td>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>4</td>\n",
+       "      <td>851</td>\n",
+       "      <td>I'm Not Rappaport (1996)</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -452,6 +594,7 @@
    "source": [
     "dls=CollabDataLoaders.from_df(\n",
     "    ratings,\n",
+    "    # @audit : what other item_name can we use?\n",
     "    item_name='title',\n",
     "    bs=64\n",
     ")\n",
@@ -463,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### n_users n_movies n_factors"
+    "### n_users n_movies n_factors"
    ]
   },
   {
@@ -517,7 +660,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### -- DOT PRODUCT -- default"
+    "# -- MODEL ARCHETECTURE --"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [ DOT PRODUCT ] -- default"
    ]
   },
   {
@@ -676,7 +826,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### -- DOT PRODUCT -- sigmoid_range"
+    "### [ DOT PRODUCT ] -- sigmoid_range"
    ]
   },
   {
@@ -814,7 +964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### -- DOT PRODUCT -- bias"
+    "### [ DOT PRODUCT ] -- bias"
    ]
   },
   {
@@ -1211,7 +1361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### -- EMBEDDINGS --"
+    "### [ EMBEDDINGS ]"
    ]
   },
   {
@@ -1552,7 +1702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### -- USING FASTAI COLLAB --"
+    "### USING [ FASTAI COLLAB ]"
    ]
   },
   {
@@ -1984,7 +2134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### -- CONCLUSION --\n",
+    "# -- CONCLUSION --\n",
     "\n",
     "For our first non-computer vision application, we looked at recommendation\n",
     "systems and saw how gradient descent can learn intrinsic factors or biases\n",
