--- a/fastai_exercises/fast_ai_chapter09-tabular-modeling-deep-dive.ipynb
+++ b/fastai_exercises/fast_ai_chapter09-tabular-modeling-deep-dive.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,16 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
     "from fastai.data.external import URLs\n",
-    "from fastai.tabular.core import TabularPandas, Categorify, FillMissing, cont_cat_split, add_datepart\n",
+    "from fastai.tabular.core import (\n",
+    "     TabularPandas, Categorify, FillMissing, \n",
+    "     cont_cat_split, add_datepart, \n",
+    "     save_pickle, #load_pickle\n",
+    ")\n",
+    "\n",
+    "from fastbook import draw_tree\n",
     "\n",
     "import tarfile\n",
     "import zipfile\n",
@@ -352,6 +360,17 @@
     "valid_idx = np.where(-cond)[0]\n",
     "\n",
     "splits = (list(train_idx), list(valid_idx))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get Data\n",
+    "\n",
+    "Build a Table where :\n",
+    "- Data are converted to NUMERIC values\n",
+    "- Fill in MISSING (empty) container values"
    ]
   },
   {
@@ -847,6 +866,233 @@
    ],
    "source": [
     "to.items.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#na#', 'Large', 'Large / Medium', 'Medium', 'Small', 'Mini', 'Compact']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to.classes['ProductSize']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fastai.tabular.core.TabularPandas"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_pickle(path/'to.pk1', to)\n",
+    "# to = load_pickle(path/'to.pk1') # load pk1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define our dependent and independent variable\n",
+    "xs, y = to.train.xs, to.train.y\n",
+    "valid_xs, valid_y = to.valid.xs, to.valid.y\n",
+    "\n",
+    "# now that all our data is numeric and there are no missing values\n",
+    "# we can create a decision tree\n",
+    "m = DecisionTreeRegressor(max_leaf_nodes=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeRegressor(max_leaf_nodes=4)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeRegressor</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeRegressor(max_leaf_nodes=4)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "DecisionTreeRegressor(max_leaf_nodes=4)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.fit(xs, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.48.0 (0)\n",
+       " -->\n",
+       "<!-- Title: Tree Pages: 1 -->\n",
+       "<svg width=\"504pt\" height=\"305pt\"\n",
+       " viewBox=\"0.00 0.00 504.00 305.27\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(0.77 0.77) rotate(0) translate(4 392.12)\">\n",
+       "<title>Tree</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-392.12 650,-392.12 650,4 -4,4\"/>\n",
+       "<!-- 0 -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>0</title>\n",
+       "<path fill=\"#eda775\" stroke=\"black\" d=\"M554.5,-387C554.5,-387 423.5,-387 423.5,-387 417.5,-387 411.5,-381 411.5,-375 411.5,-375 411.5,-331 411.5,-331 411.5,-325 417.5,-319 423.5,-319 423.5,-319 554.5,-319 554.5,-319 560.5,-319 566.5,-325 566.5,-331 566.5,-331 566.5,-375 566.5,-375 566.5,-381 560.5,-387 554.5,-387\"/>\n",
+       "<text text-anchor=\"start\" x=\"419.5\" y=\"-371.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">Coupler_System ≤ 0.5</text>\n",
+       "<text text-anchor=\"start\" x=\"423\" y=\"-356.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">squared_error = 0.48</text>\n",
+       "<text text-anchor=\"start\" x=\"431.5\" y=\"-341.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 404710</text>\n",
+       "<text text-anchor=\"start\" x=\"450.5\" y=\"-326.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 10.1</text>\n",
+       "</g>\n",
+       "<!-- 1 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>1</title>\n",
+       "<path fill=\"#eb9d64\" stroke=\"black\" d=\"M385,-278C385,-278 261,-278 261,-278 255,-278 249,-272 249,-266 249,-266 249,-222 249,-222 249,-216 255,-210 261,-210 261,-210 385,-210 385,-210 391,-210 397,-216 397,-222 397,-222 397,-266 397,-266 397,-272 391,-278 385,-278\"/>\n",
+       "<text text-anchor=\"start\" x=\"262\" y=\"-262.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">YearMade ≤ 1991.5</text>\n",
+       "<text text-anchor=\"start\" x=\"257\" y=\"-247.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">squared_error = 0.42</text>\n",
+       "<text text-anchor=\"start\" x=\"265.5\" y=\"-232.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 360847</text>\n",
+       "<text text-anchor=\"start\" x=\"280.5\" y=\"-217.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 10.21</text>\n",
+       "</g>\n",
+       "<!-- 0&#45;&gt;1 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>0&#45;&gt;1</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M437.39,-318.73C420.13,-307.61 400.75,-295.11 382.91,-283.62\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"384.6,-280.54 374.3,-278.06 380.81,-286.42 384.6,-280.54\"/>\n",
+       "<text text-anchor=\"middle\" x=\"379.58\" y=\"-298.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">True</text>\n",
+       "</g>\n",
+       "<!-- 2 -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>2</title>\n",
+       "<path fill=\"#ffffff\" stroke=\"black\" d=\"M634,-54.5C634,-54.5 510,-54.5 510,-54.5 504,-54.5 498,-48.5 498,-42.5 498,-42.5 498,-13.5 498,-13.5 498,-7.5 504,-1.5 510,-1.5 510,-1.5 634,-1.5 634,-1.5 640,-1.5 646,-7.5 646,-13.5 646,-13.5 646,-42.5 646,-42.5 646,-48.5 640,-54.5 634,-54.5\"/>\n",
+       "<text text-anchor=\"start\" x=\"506\" y=\"-39.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">squared_error = 0.12</text>\n",
+       "<text text-anchor=\"start\" x=\"518\" y=\"-24.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 43863</text>\n",
+       "<text text-anchor=\"start\" x=\"533.5\" y=\"-9.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 9.21</text>\n",
+       "</g>\n",
+       "<!-- 0&#45;&gt;2 -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>0&#45;&gt;2</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M497.49,-318.95C513.19,-257.88 546.6,-127.83 562.81,-64.77\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"566.25,-65.44 565.35,-54.88 559.47,-63.7 566.25,-65.44\"/>\n",
+       "<text text-anchor=\"middle\" x=\"578.07\" y=\"-72.7\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">False</text>\n",
+       "</g>\n",
+       "<!-- 3 -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>3</title>\n",
+       "<path fill=\"#f0b48a\" stroke=\"black\" d=\"M136,-54.5C136,-54.5 12,-54.5 12,-54.5 6,-54.5 0,-48.5 0,-42.5 0,-42.5 0,-13.5 0,-13.5 0,-7.5 6,-1.5 12,-1.5 12,-1.5 136,-1.5 136,-1.5 142,-1.5 148,-7.5 148,-13.5 148,-13.5 148,-42.5 148,-42.5 148,-48.5 142,-54.5 136,-54.5\"/>\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-39.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">squared_error = 0.37</text>\n",
+       "<text text-anchor=\"start\" x=\"16.5\" y=\"-24.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 155724</text>\n",
+       "<text text-anchor=\"start\" x=\"35.5\" y=\"-9.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 9.97</text>\n",
+       "</g>\n",
+       "<!-- 1&#45;&gt;3 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>1&#45;&gt;3</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M284.37,-209.8C237.23,-169.29 158.09,-101.27 111.48,-61.22\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"113.6,-58.42 103.74,-54.56 109.04,-63.73 113.6,-58.42\"/>\n",
+       "</g>\n",
+       "<!-- 4 -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>4</title>\n",
+       "<path fill=\"#e78a48\" stroke=\"black\" d=\"M385,-170C385,-170 261,-170 261,-170 255,-170 249,-164 249,-158 249,-158 249,-114 249,-114 249,-108 255,-102 261,-102 261,-102 385,-102 385,-102 391,-102 397,-108 397,-114 397,-114 397,-158 397,-158 397,-164 391,-170 385,-170\"/>\n",
+       "<text text-anchor=\"start\" x=\"267.5\" y=\"-154.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">ProductSize ≤ 4.5</text>\n",
+       "<text text-anchor=\"start\" x=\"257\" y=\"-139.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">squared_error = 0.37</text>\n",
+       "<text text-anchor=\"start\" x=\"265.5\" y=\"-124.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 205123</text>\n",
+       "<text text-anchor=\"start\" x=\"284.5\" y=\"-109.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 10.4</text>\n",
+       "</g>\n",
+       "<!-- 1&#45;&gt;4 -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>1&#45;&gt;4</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M323,-209.75C323,-200.38 323,-190.04 323,-180.18\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"326.5,-180.13 323,-170.13 319.5,-180.13 326.5,-180.13\"/>\n",
+       "</g>\n",
+       "<!-- 5 -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>5</title>\n",
+       "<path fill=\"#e58139\" stroke=\"black\" d=\"M302,-54.5C302,-54.5 178,-54.5 178,-54.5 172,-54.5 166,-48.5 166,-42.5 166,-42.5 166,-13.5 166,-13.5 166,-7.5 172,-1.5 178,-1.5 178,-1.5 302,-1.5 302,-1.5 308,-1.5 314,-7.5 314,-13.5 314,-13.5 314,-42.5 314,-42.5 314,-48.5 308,-54.5 302,-54.5\"/>\n",
+       "<text text-anchor=\"start\" x=\"174\" y=\"-39.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">squared_error = 0.31</text>\n",
+       "<text text-anchor=\"start\" x=\"182.5\" y=\"-24.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 182403</text>\n",
+       "<text text-anchor=\"start\" x=\"201.5\" y=\"-9.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 10.5</text>\n",
+       "</g>\n",
+       "<!-- 4&#45;&gt;5 -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>4&#45;&gt;5</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M296.97,-101.75C287.22,-89.3 276.14,-75.15 266.36,-62.66\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"269.07,-60.45 260.15,-54.73 263.56,-64.76 269.07,-60.45\"/>\n",
+       "</g>\n",
+       "<!-- 6 -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>6</title>\n",
+       "<path fill=\"#f7d6bf\" stroke=\"black\" d=\"M468,-54.5C468,-54.5 344,-54.5 344,-54.5 338,-54.5 332,-48.5 332,-42.5 332,-42.5 332,-13.5 332,-13.5 332,-7.5 338,-1.5 344,-1.5 344,-1.5 468,-1.5 468,-1.5 474,-1.5 480,-7.5 480,-13.5 480,-13.5 480,-42.5 480,-42.5 480,-48.5 474,-54.5 468,-54.5\"/>\n",
+       "<text text-anchor=\"start\" x=\"340\" y=\"-39.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">squared_error = 0.17</text>\n",
+       "<text text-anchor=\"start\" x=\"352\" y=\"-24.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 22720</text>\n",
+       "<text text-anchor=\"start\" x=\"367.5\" y=\"-9.3\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 9.62</text>\n",
+       "</g>\n",
+       "<!-- 4&#45;&gt;6 -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>4&#45;&gt;6</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M349.03,-101.75C358.78,-89.3 369.86,-75.15 379.64,-62.66\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"382.44,-64.76 385.85,-54.73 376.93,-60.45 382.44,-64.76\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.sources.Source at 0x17d5d9b50>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "draw_tree(m, xs, size=7, leaves_parallel=True, precision=2)"
    ]
   }
  ],
