--- a/fastai_exercises/fast_ai_chapter09-tabular-modeling-deep-dive.ipynb
+++ b/fastai_exercises/fast_ai_chapter09-tabular-modeling-deep-dive.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,8 @@
     "# Fast Ai Tabular Fixes\n",
     "from fastai.tabular.core import (\n",
     "     TabularPandas, Categorify, FillMissing, Normalize,\n",
-    "     cont_cat_split, add_datepart, \n",
+    "     cont_cat_split, add_datepart,\n",
+    "     to_np\n",
     ")\n",
     "\n",
     "from fastai.tabular.learner import tabular_learner\n",
@@ -9496,6 +9497,108 @@
    ],
    "source": [
     "learn.save('nn') # ~24 mb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -- Ensembling --"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.221739"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_preds = m.predict(valid_xs_time)\n",
+    "ens_preds = (to_np(preds.squeeze()) + rf_preds) /2\n",
+    "\n",
+    "r_mse(ens_preds, valid_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boosting\n",
+    "\n",
+    "- Field moving fast, skipping as things will be outdated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combining Embeddings with Other Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [CONCLUSION]\n",
+    "\n",
+    "Tabular Modeling\n",
+    "\n",
+    "- 1 - Decision Tree Ensemble\n",
+    "    - Random Forest\n",
+    "        - Easiest to train\n",
+    "            - Resilient to hyperparameter choices\n",
+    "            - Require little preprocessing\n",
+    "        - Fast To Train\n",
+    "        - impervious to overfitting ... explain why?\n",
+    "        - Struggles with Accuracy\n",
+    "            - Especially when extrapolating to predict FUTURE time periods\n",
+    "    - Gradient Boosting Machines\n",
+    "        - vulnerable to overfitting\n",
+    "        - lots of hyperparameter tuning\n",
+    "- 2 - Neural Networks\n",
+    "    - Takes the longest to train\n",
+    "    - Requires extra processing\n",
+    "        - Normalization req\n",
+    "            - @ Training and Inference\n",
+    "    - Great results and EXTRAPOLATES well\n",
+    "\n",
+    "Recommended Best Practice\n",
+    "\n",
+    "- 1 - Start with random forest\n",
+    "    - starting model can be used to better undertand your data baseline\n",
+    "        - a - feature selection\n",
+    "        - b - partial dependence analysis\n",
+    "- 2 - From that baseline\n",
+    "    - experiment to determine which yields better results faster\n",
+    "        - a - decision trees / GBMs\n",
+    "            - add embedding for categorical variables\n",
+    "        - b - neural nets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questionnaire\n",
+    "\n",
+    "- 1 - What is a continous variable\n",
+    "\n",
+    "```sh\n",
+    "ANSWER : A continous variable has smooth curve of values\n",
+    "Generally represented by numbers : ints, floats, vectors ...etc\n",
+    "```\n",
+    "\n",
+    "- 2 - What is a categorical variable"
    ]
   }
  ],
