ch 10 refeed WordTokenizer

--- a/fastai_exercises/fast_ai_chapter10-nlp-deep-dive-rnn.ipynb
+++ b/fastai_exercises/fast_ai_chapter10-nlp-deep-dive-rnn.ipynb
@@ -457,7 +457,9 @@
    "source": [
     "### -- Tokenization --\n",
     "\n",
-    "Resolution\n",
+    "- Process of Splitting Text into Tokens\n",
+    "\n",
+    "#### Resolution\n",
     "\n",
     "- 1 - Character\n",
     "    - split into INDIVDUAL CHARS\n",
@@ -526,18 +528,30 @@
     }
    ],
    "source": [
-    "# Xform text to tokens\n",
+    "# ==[ Split text to tokens ]==\n",
     "# WordTokenizer is a Fastai tokenizing library that can : \n",
     "# - collect subwords\n",
     "# - handling contextual corner cases like '.' as sentence end vs value marker\n",
     "spacy = WordTokenizer()\n",
+    "# txt is wrapped in a [] list \n",
+    "# - because tokenizer expects an iterable of text\n",
+    "# - not a single monolithic string\n",
+    "# first retrieves the 1st element from an iterable\n",
+    "# - gets the first (and presumably only) list of tokens produced by the \n",
+    "# tokenizer for the given text\n",
     "toks = first(spacy([txt]))\n",
     "\n",
-    "# @audit : explain coll_repr\n",
+    "# coll_repr == collection representation\n",
+    "# - this prints the collection\n",
+    "#   - contents of toks\n",
+    "#   - up to 30\n",
     "print(coll_repr(toks, 30))\n",
     "\n",
-    "# The char '.' is terminated in a sentence, but not the '1.00' acronym\n",
     "# Tokenization logic needs to handle very subtle context\n",
+    "# Here the char '.' has 3 meanings :\n",
+    "# - 1 - terminator at the end of the sentence\n",
+    "# - 2 - decimal placeholder for '1.00'\n",
+    "# - 3 - abbreviation for United States to U.S.\n",
     "first(spacy(['The U.S. dollar $1 is $1.00.']))"
    ]
   },
@@ -1043,7 +1057,10 @@
     "dl = LMDataLoader(nums200)\n",
     "\n",
     "x,y = first(dl)\n",
-    "x.shape, y.shape"
+    "x.shape, y.shape\n",
+    "# @audit : Explain this!\n",
+    "# - (torch.Size([64, 4]), torch.Size([64, 4]))   # our results\n",
+    "# - (torch.Size([64, 72]), torch.Size([64, 72])) # book results"
    ]
   },
   {
